# 05_hw

./: dockerfile  predict_hw.py  pyproject.toml  test.py
