[project]
name = "hw"
version = "0.1.0"
description = "lead score"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.120.2",
    "scikit-learn>=1.6.1",
    "unicorn>=2.1.4",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]

[tool.uv.workspace]
members = [
    "hw",
]